--- a/wfc.vcproj
+++ b/wfc.vcproj
@@ -117,7 +117,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="./Include"
+				AdditionalIncludeDirectories="./wfc"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;WFX_EXPORTS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
